episodes/071/webhook-config.yaml
kind: ValidatingWebhookConfiguration
apiVersion: admissionregistration.k8s.io/v1beta1
metadata:
  name: opa-validating-webhook
webhooks:
  - name: validating-webhook.openpolicyagent.org
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: ["*"]
        apiVersions: ["*"]
        resources: ["*"]
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUNyRENDQVpRQ0NRRDFzVjFJOC9HcTRqQU5CZ2txaGtpRzl3MEJBUXNGQURBWE1SVXdFd1lEVlFRRERBeGgKWkcxcGMzTnBiMjVmWTJFd0lCY05NVGt3TkRBMU1qQXpNVEF5V2hnUE1qSTVNekF4TVRneU1ETXhNREphTUJjeApGVEFUQmdOVkJBTU1ER0ZrYldsemMybHZibDlqWVRDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDCkFRb0NnZ0VCQUo1YjFUNS9iOEhCMUJJL1BnQlRpR0NLNWxhU1FtRWdJWW11MkJ3b3AybUE1UTRRUkthMVdaYkwKM0pkRjRFYUFNcy9Cb2t2V3R3MUVlRzBoc3NCbzJ0L3dTS0RwS1NmbVU4dVFNcElxdEpqTUJ1UmtEY1pEZzFzUQoybXNnV2xqdklm [...]
      service:
        namespace: opa
        name: opa
